
  Others:
  * Start using 'ChangeLog' for logging changes again.
  * Terminfo update for 256-color support.
  * Multiple input history (partially from Romain Francoise).
  * vi-like fFtT;, searching in copy mode.
  * In copy mode, search in reverse direction when 'N' is pressed.
  * Tab-completion for command input.
  * Some more readline-like bindings in input mode (e.g. ^W, ^D, ^P, ^N etc.)

  In-Progress:
  * Scripting support (thanks to Google Summer of Code 2009 project by Rui Guo)

  Developers:
  * Juergen Weigert <jw@suse.de>
  * Michael Schroeder <mls@suse.de>
  * Micah Cowan <micah@cowan.name>
  * Sadrul Habib Chowdhury <sadrul@users.sourceforge.net>

  Contributors:
  * Dick <dick@mrns.nl>
  * Gabriel <g2p.code@gmail.com>
  * Benjamin Andresen <bandresen@gmail.com>
  * Maarten Billemont <lhunath@gmail.com>
  * Curtis Brown <mrbrown8@juno.com>
  * Cyril Brulebois <kibi@debian.org>
  * Trent W Buck <trentbuck@gmail.com>
  * Stephane Chazelas <stephane_chazelas@yahoo.fr>
  * Thomas Dickey <tom@invisible-island.net>
  * Christian Ebert <blacktrash@gmx.net>
  * Geraint Edwards <gedge-lists-screen@yadn.org>
  * Romain Francoise <romain@orebokech.com>
  * Emanuele Giaquinta <e.giaquinta@glauco.it>
  * Steve Kemp <steve@steve.org.uk>
  * William Pursell <bill.pursell@gmail.com>
  * Enrico Scholz <enrico.scholz@informatik.tu-chemnitz.de>
  * Peter Teichman <peter@teichman.org>

30.10.94

This is a quick overview of screen's life story. But it is not up
to date.  You'll find more details about the revision history in
patchlevel.h and newer changes are only documented there. 

31.7.93	-- 3.5.1
================

* writelock, number, paste with arg, at, zombie and wall commands added.

* Access Control Lists and more multi-user support added.

* select and setenv commands enhanced.

* socket.c: motorola bugfix.

* configure.in: --srcdir support.

* configure.in: recognize alpha and SUNOS3 correctly.

* doc/screen.texinfo: Documentation by Jason Merrill.
